--- a/DesignPost.org
+++ b/DesignPost.org
@@ -1,4 +1,4 @@
-* Design Brands in VR
+* Design in VR
 
 Virtual and Augmented Reality are gradually becoming more prevalent in the world of design. Firms who've yet to adopt the technology have failed to realize an opportunity to powerfully communicate the essence of their brand.   
 
