--- a/FullWebTextJuly2018.org
+++ b/FullWebTextJuly2018.org
@@ -12,6 +12,8 @@ Build XR page intro text: Extended Reality may provide a variety of solutions ac
 - 5 figures 
 - 6 figures
 
+We'll apply your responses to the next step in our consultancy.
+
 followed by:
 
 *** Describe your idea
