--- a/producttable.org
+++ b/producttable.org
@@ -1,39 +1,46 @@
- | funx                      | form                    | launch                     | graphic | Intro | exsum | ft. | ben | invstmt | rsch | ursty | TA | TAG | propi | distrn | conl | wbd | anim | fstrat | cf | gant | related VR exp | legal         | budget | tagline | Abstract | Description | VO |
- | 1. architect              | blueprint               | sketch house               | feb 12  | +     | -     | -   | +   | +       | +    | -     | -  | -   | -     | -      | -    | -   | +    | -      | -  | -    | -              | google blocks | -      | -       | +        | +           | +  |
- | 2. color                  | chose colors            | 3D Color Palet             | feb 12  | +     | -     | +   | +   | -       | +    | -     | -  | -   | -     | -      | -    | +   | +    | -      | +  | -    | -              | tilt brush    | -      | +       | +        | +           | +  |
- | 3. music                  | discover, share, create | Listen on the Moon         | feb 12  | +     | +     | +   | +   | +       | +    | +     | +  | +   | +     | -      | -    | +   | -    | -      | +  | -    | -              | accounting    | -      | -       | +        | +           | +  |
- | 4. bloomaway              | transportati            | embossed map               | feb 12  | +     | +     | +   | +   | +       | +    | +     | +  | -   | +     | -      | -    | +   | -    | +      | -  | -    | -              | realities     | -      | +       | +        | +           | +  |
- | 5. infinite               | view content            | art gallery                | feb 12  | +     | +     | +   | +   | +       | +    | +     | +  | -   | +     | -      | -    | +   | +    | -      | +  | -    | n-             |               | -      | +       | +        | +           | +  |
- | 6. facematch              | ad-view verify          | phone application          | feb 12  | +     | +     | -   | -   | +       | +    | -     | +  | +   | +     | +      | +    | +   | -    | +      | +  | +    | -              |               | +      | -       | -        | -           | -  |
- | 7. live stream            | telepresence            | live 360 video)            | feb 12  | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
- | 8. nye                    | entertainment           | cg lobby + 360 video       | feb 12  | +     | +     | +   | +   | +       | +    | +     | +  | +   | -     | +      | +    | +   | -    | +      | -  | +    | y              | bloomaway     | +      | +       | +        | +           | -  |
- | 9. live forever           | immortalize             | 3d avatar                  | march 1 | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
- | 10. enterprise b2b        | sales preentation       | inside product             |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
- | 11. exhibit               | onsite edu / ent        | microarch + underwater     |         | +     | +     | -   | -   | -       | +    | +     | -  | -   | -     | -      | -    | -   | +    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
- | 12. festival              | Live Event Marketing    | microar + perform on stage |         | +     | +     | +   | +   | +       | +    | +     | +  | -   | +     | +      | +    | -   | -    | +      | +  | -    | accounting     | no            | no     | +       | +        | +           | -  |
- | 13. wellness              | Mindfullness in VR      | nature                     |         | -     | +     | -   | -   | -       | +    | -     | -  | +   | -     | -      | -    | -   | -    | -      | -  | -    | -              | no            | no     | -       | -        | -           | -  |
- | 14. 3d brand design       | 3d brand design         | 3d files                   |         | -     | -     | -   | -   | -       | +    | -     | -  | +   | -     | -      | -    | -   | -    | -      | -  | -    | -              | no            | no     | -       | -        | -           | -  |
- | 15. anon on blockchain    | anonymous comp          | phone app                  |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
- | 16. ar branding           | brand, engage           | ar app phone               |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
- | 17. ar reatil             | sell on site            | vr store                   |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
- | 18. ar event              | engage brand, sell      | phone app w/ pics          |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
- | 19. fifa                  |                         |                            |         | -     | -     | -   | -   | -       | -    | -     | -  | --  | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
- | 20. foodman               |                         |                            |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
- | 21. health care           |                         |                            |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
- | 22. hotels                | sell brand hotel rooms  | bloomaway                  |         | +     | +     | -   | -   | -       | -    | -     | +  | +   | +     | -      | -    | -   | -    | +      | -  | -    | -              |               |        | -       | -        | -           | -  |
- | 23. in vr                 |                         |                            |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
- | 24. sports                | training                | on-feild sim               |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
- | 25. token sale            |                         |                            |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
- | 26. encyclopedia          | index information       | visual encyclopedia        |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
- | 27. xr-first website      |                         |                            |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
- | 28. emacs GUI             |                         |                            |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
- | 29. torus                 | consume information     | torus (disformed sphere)   |         | -     | -     | +   | +   | -       | -    | -     | -  | -   | -     | -      | -    | +   | -    | -      | -  | -    | -              | Patent rsrch  |        | +       | +        | +           | +  |
- | 30. existing int he world | edu/ent                 | book/text                  |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
- | 31. bioler room           | social gather/ ent      | bar/concert/studio/party   |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
- | 32. Catalog               |                         |                            |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
- | 33. city dev              |                         |                            |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
- | 34. coaches               |                         |                            |         | -     | -     | -   | -   | -       | -    | -     | -  | --  | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
- | 36. scavenger hunt        |                         |                            |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
-
-
+ | funx                     | form                    | launch                     | graphic | Intro | exsum | ft. | ben | invstmt | rsch | ursty | TA | TAG | propi | distrn | conl | wbd | anim | fstrat | cf | gant | related VR exp | legal         | budget | tagline | Abstract | Description | VO |
+ | architect                | blueprint               | sketch house               | feb 12  | +     | -     | -   | +   | +       | +    | -     | -  | -   | -     | -      | -    | -   | +    | -      | -  | -    | -              | google blocks | -      | -       | +        | +           | +  |
+ | color                    | chose colors            | 3D Color Palet             | feb 12  | +     | -     | +   | +   | -       | +    | -     | -  | -   | -     | -      | -    | +   | +    | -      | +  | -    | -              | tilt brush    | -      | +       | +        | +           | +  |
+ | music                    | discover, share, create | Listen on the Moon         | feb 12  | +     | +     | +   | +   | +       | +    | +     | +  | +   | +     | -      | -    | +   | -    | -      | +  | -    | -              | accounting    | -      | -       | +        | +           | +  |
+ | bloomaway                | transportati            | embossed map               | feb 12  | +     | +     | +   | +   | +       | +    | +     | +  | -   | +     | -      | -    | +   | -    | +      | -  | -    | -              | realities     | -      | +       | +        | +           | +  |
+ | infinite                 | view content            | art gallery                | feb 12  | +     | +     | +   | +   | +       | +    | +     | +  | -   | +     | -      | -    | +   | +    | -      | +  | -    | n-             |               | -      | +       | +        | +           | +  |
+ | facematch                | ad-view verify          | phone application          | feb 12  | +     | +     | -   | -   | +       | +    | -     | +  | +   | +     | +      | +    | +   | -    | +      | +  | +    | -              |               | +      | -       | -        | -           | -  |
+ | live stream              | telepresence            | live 360 video)            | feb 12  | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
+ | nye                      | entertainment           | cg lobby + 360 video       | feb 12  | +     | +     | +   | +   | +       | +    | +     | +  | +   | -     | +      | +    | +   | -    | +      | -  | +    | y              | bloomaway     | +      | +       | +        | +           | -  |
+ | live forever             | immortalize             | 3d avatar                  | march 1 | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
+ | enterprise b2b           | sales preentation       | inside product             |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
+ | exhibit                  | onsite edu / ent        | microarch + underwater     |         | +     | +     | -   | -   | -       | +    | +     | -  | -   | -     | -      | -    | -   | +    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
+ | festival                 | Live Event Marketing    | microar + perform on stage |         | +     | +     | +   | +   | +       | +    | +     | +  | -   | +     | +      | +    | -   | -    | +      | +  | -    | accounting     | no            | no     | +       | +        | +           | -  |
+ | wellness                 | Mindfullness in VR      | nature                     |         | -     | +     | -   | -   | -       | +    | -     | -  | +   | -     | -      | -    | -   | -    | -      | -  | -    | -              | no            | no     | -       | -        | -           | -  |
+ | 3d brand design          | 3d brand design         | 3d files                   |         | -     | -     | -   | -   | -       | +    | -     | -  | +   | -     | -      | -    | -   | -    | -      | -  | -    | -              | no            | no     | -       | -        | -           | -  |
+ | anon on blockchain       | anonymous comp          | phone app                  |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
+ | ar branding              | brand, engage           | ar app phone               |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
+ | ar reatil                | sell on site            | vr store                   |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
+ | ar event                 | engage brand, sell      | phone app w/ pics          |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
+ | fifa                     |                         |                            |         | -     | -     | -   | -   | -       | -    | -     | -  | --  | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
+ | foodman                  |                         |                            |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
+ | health care              |                         |                            |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
+ | hotels                   | sell brand hotel rooms  | bloomaway                  |         | +     | +     | -   | -   | -       | -    | -     | +  | +   | +     | -      | -    | -   | -    | +      | -  | -    | -              |               |        | -       | -        | -           | -  |
+ | in vr                    |                         |                            |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
+ | sports                   | training                | on-feild sim               |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
+ | token sale               |                         |                            |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
+ | encyclopedia             | index information       | visual encyclopedia        |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
+ | xr-first website         |                         |                            |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
+ | torus                    | consume information     | torus (disformed sphere)   |         | -     | -     | +   | +   | -       | -    | -     | -  | -   | -     | -      | -    | +   | -    | -      | -  | -    | -              | Patent rsrch  |        | +       | +        | +           | +  |
+ | existing int he world    | edu/ent                 | book/text                  |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
+ | Catalog                  |                         |                            |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
+ | city dev                 |                         |                            |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
+ | coaches                  |                         |                            |         | -     | -     | -   | -   | -       | -    | -     | -  | --  | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
+ | scavenger hunt           |                         |                            |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
+ | XR Mall                  |                         |                            |         |       |       |     |     |         |      |       |    |     |       |        |      |     |      |        |    |      |                |               |        |         |          |             |    |
+ | Professional Services    |                         |                            |         |       |       |     |     |         |      |       |    |     |       |        |      |     |      |        |    |      |                |               |        |         |          |             |    |
+ | Play SImulations         |                         |                            |         |       |       |     |     |         |      |       |    |     |       |        |      |     |      |        |    |      |                |               |        |         |          |             |    |
+ | building space modelling |                         |                            |         |       |       |     |     |         |      |       |    |     |       |        |      |     |      |        |    |      |                |               |        |         |          |             |    |
+ | Radio show               |                         |                            |         |       |       |     |     |         |      |       |    |     |       |        |      |     |      |        |    |      |                |               |        |         |          |             |    |
+ | Sponsorshipplatform      |                         |                            |         |       |       |     |     |         |      |       |    |     |       |        |      |     |      |        |    |      |                |               |        |         |          |             |    |
+ | projection mapping       |                         |                            |         |       |       |     |     |         |      |       |    |     |       |        |      |     |      |        |    |      |                |               |        |         |          |             |    |
+ | 360 play                 |                         |                            |         |       |       |     |     |         |      |       |    |     |       |        |      |     |      |        |    |      |                |               |        |         |          |             |    |
+ | VR Technician            |                         |                            |         |       |       |     |     |         |      |       |    |     |       |        |      |     |      |        |    |      |                |               |        |         |          |             |    |
+ | 2D content library       |                         |                            |         |       |       |     |     |         |      |       |    |     |       |        |      |     |      |        |    |      |                |               |        |         |          |             |    |
+ |                          |                         |                            |         |       |       |     |     |         |      |       |    |     |       |        |      |     |      |        |    |      |                |               |        |         |          |             |    |
  
