PR notes for web text

--- a/WebTextFall18.org
+++ b/WebTextFall18.org
@@ -1,6 +1,32 @@
 * Web Text 
 
-[Begin 12:56 AM on Sept 17]
+[Begin: 4:13 PM Sept 18]
+[End: 
+
+Start today with Public Relations part of the website. Begin with Kristin's writing/LinkedIn page. Intro to one of her articles.. I developed the post below in 2014 to argue the case that public relations is more than media relations. This is not to say that media are not important. In fact, I spend much of my time at the Logos Institute for Crisis Management & Executive Leadership working with executives to be more effective in their interviews and presentations - with press or other important stakeholders.
+
+** Public Relations
+Don't simplify PR as media coverage
+
+1) Pitching 
+2) Managing Inbound requests 
+
+I also believe whole heartedly that it stands for personal relationships, which are cultivated and sustained through strategic communication.
+
+PR is technical stuff and at the heart of it are real people.
+
+Dove was able to connect with the brand with global stakeholders in a powerful way that went far beyond products.This is the focus of public relations planning. 
+
+It helps support personal relationship on behalf of companies, brands and leaders by saying the right thing, in the right way, at the right time, to the right stakeholders.
+
+The importance of brand awareness – what your company is putting out and more importantly, how it will be received
+
+JetBlue was a pioneer in this space, turning to YouTube in 2007 after bad weather grounded passengers on Valentine’s Day for hours and spurred the cancellation of more than 1,000 flights. According to a case study published in AdWeek, “that early use of a social channel, along with JetBlue’s general openness and willingness to take responsibility, helped it soar above the media circus and resume its steady course as a consumer favorite.”
+
+...
+
+[Begin 12:56 AM on Sept 18]
+[End 1:30 AM Sept 18]
 
 I am working 10 hours on website text this week. Here are the areas of the site that need the most work 
 
