pr adds web text

--- a/WebTextFall18.org
+++ b/WebTextFall18.org
@@ -1,7 +1,7 @@
 * Web Text 
 
 [Begin: 4:13 PM Sept 18]
-[End: 
+[End: 4:35 PM Sept 18]
 
 Start today with Public Relations part of the website. Begin with Kristin's writing/LinkedIn page. Intro to one of her articles.. I developed the post below in 2014 to argue the case that public relations is more than media relations. This is not to say that media are not important. In fact, I spend much of my time at the Logos Institute for Crisis Management & Executive Leadership working with executives to be more effective in their interviews and presentations - with press or other important stakeholders.
 
